[gd_scene load_steps=15 format=3 uid="uid://cl16hinyu50v2"]

[ext_resource type="Script" uid="uid://cchhv1woyihes" path="res://script/character_dialog_script.gd" id="1_73p86"]
[ext_resource type="Texture2D" uid="uid://d2v3ecylver60" path="res://Asset/Tiles/black_background.png" id="2_wyocy"]
[ext_resource type="Texture2D" uid="uid://cv616st5j81hh" path="res://Asset/Tiles/white_backgroud.png" id="3_sm2yv"]
[ext_resource type="Texture2D" uid="uid://0e0rdx6xrm4w" path="res://Asset/Character/Rigo/Rigo.png" id="4_ft204"]
[ext_resource type="Theme" uid="uid://ockebcoevtig" path="res://theme/dialog_theme.tres" id="4_jvgqs"]
[ext_resource type="Texture2D" uid="uid://drytu5qamedg6" path="res://Asset/Character/Silvy/Silvy.png" id="5_jvgqs"]
[ext_resource type="Texture2D" uid="uid://bcqv7w74dm88o" path="res://Asset/Character/Dell/Dell.png" id="6_na7qg"]
[ext_resource type="Texture2D" uid="uid://eg5pkmgpkxk5" path="res://Asset/Character/Julian/Julian.png" id="7_iflwg"]
[ext_resource type="Texture2D" uid="uid://btutv0lvia5om" path="res://Asset/Character/Kyo/Kyo.png" id="8_emcmp"]
[ext_resource type="Texture2D" uid="uid://wc518einle36" path="res://Asset/Character/Rainbell/Rainbell.png" id="9_we0j7"]
[ext_resource type="Texture2D" uid="uid://cvgr3r0ioxnff" path="res://Asset/Character/Real/real.png" id="10_gjg53"]
[ext_resource type="Texture2D" uid="uid://r8ktgt5p4pml" path="res://Asset/Character/M.JPG" id="11_ft204"]

[sub_resource type="Theme" id="Theme_na7qg"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ialet"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ft204")
}],
"loop": true,
"name": &"Riko",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_jvgqs")
}],
"loop": true,
"name": &"chilfie",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_na7qg")
}],
"loop": true,
"name": &"delmon",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_iflwg")
}],
"loop": true,
"name": &"julius",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_emcmp")
}],
"loop": true,
"name": &"kyoto",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_we0j7")
}],
"loop": true,
"name": &"renbel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_gjg53")
}],
"loop": true,
"name": &"ryou",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ft204")
}],
"loop": true,
"name": &"xxx",
"speed": 5.0
}]

[node name="Character_Dialog_Layer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_73p86")

[node name="dialogue_background" type="Node2D" parent="."]

[node name="BlackBackground" type="Sprite2D" parent="dialogue_background"]
position = Vector2(960, 929)
scale = Vector2(1.06667, 0.416667)
texture = ExtResource("2_wyocy")

[node name="WhiteBackgroud" type="Sprite2D" parent="dialogue_background"]
position = Vector2(224, 896)
scale = Vector2(0.625, 0.5375)
texture = ExtResource("3_sm2yv")

[node name="GrayBackgroud" type="Sprite2D" parent="dialogue_background"]
modulate = Color(0.244776, 0.244776, 0.244776, 1)
position = Vector2(224, 896)
scale = Vector2(0.55, 0.5)
texture = ExtResource("3_sm2yv")

[node name="GreyBackgroud" type="Sprite2D" parent="dialogue_background"]
modulate = Color(0.821789, 0.821789, 0.821789, 1)
position = Vector2(224, 896)
scale = Vector2(0.5, 0.45)
texture = ExtResource("3_sm2yv")

[node name="text_dialog_bag" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 472.0
offset_top = 840.0
offset_right = 1856.0
offset_bottom = 1040.0

[node name="Panel" type="Panel" parent="text_dialog_bag"]
custom_minimum_size = Vector2(1384, 200)
layout_mode = 2
offset_right = 1384.0
offset_bottom = 200.0
theme = ExtResource("4_jvgqs")

[node name="Label" type="Label" parent="text_dialog_bag"]
layout_mode = 2
offset_left = 40.0
offset_top = 20.0
offset_right = 1352.0
offset_bottom = 184.0
theme = SubResource("Theme_na7qg")

[node name="Profile_picture" type="Control" parent="."]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 482.0
offset_right = 174.0
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Profile_picture"]
layout_mode = 2

[node name="char_profile" type="AnimatedSprite2D" parent="Profile_picture"]
process_mode = 3
position = Vector2(224, 414)
scale = Vector2(0.15975, 0.144)
sprite_frames = SubResource("SpriteFrames_ialet")
animation = &"xxx"

[node name="Panel" type="Panel" parent="Profile_picture"]
layout_mode = 2
offset_left = 472.0
offset_top = 270.0
offset_right = 736.0
offset_bottom = 342.0
theme = ExtResource("4_jvgqs")

[node name="Label" type="Label" parent="Profile_picture"]
layout_mode = 2
offset_left = 488.0
offset_top = 286.0
offset_right = 720.0
offset_bottom = 326.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
